<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Grand Cercle</string>
    <string name="tabEvent">Evenements</string>
    <string name="tabNews">News</string>
    <string name="tabBP">Bons Plans</string>
    <string name="tabInfos">Infos</string>
    <string name="tabParam">Parametres</string>
    <string name="parsing">Modifications en cours</string>
    <string name="Ok">OK</string>
    <string name="desc"></string>
    <string name="NoirGrandCercle">Noir GrandCercle</string>
    <string name="VertEnsimag">Vert Ensimag</string>
    <string name="RougePhelma">Rouge Phelma</string>
    <string name="BleuEnse3">Bleu Ense3</string>
    <string name="OrangePagora">Orange Pagora</string>
    <string name="BleuGI">Bleu GI</string>
    <string name="JauneCPP">Jaune CPP</string>
    <string name="VioletEsisar">Violet Esisar</string>
    <string name="Ajouter">Ajouter</string>
    <string name="interfacePerso">Personnaliser l\'interface de l\'application</string>
    <string name="Theme">Thème</string>
    
    <string-array name="prefentries">
        <item >Item 1</item>
        <item >Item 2</item>
    </string-array>
    <string-array name="prefvalues">
        <item >Item 3</item>
    </string-array>
    <string-array name="prefListentries">
		<item>Cercle E3</item>
		<item>Cercle Phelma</item>
		<item>Cercle Papet</item>
		<item>Cercle Ensimag</item>
		<item>Cercle GI</item>
		<item>Cercle Esisar</item>
	</string-array>
	<string-array name="prefListvalues">
		<item>Ense3</item>
		<item>Phelma</item>
		<item>Papet</item>
		<item>Ensimag</item>
		<item>GI</item>
		<item>Esisar</item>
	</string-array> 
	<string-array name="prefListTypes">
		<item>Soirées</item>
		<item>Evénements sportifs</item>
		<item>Autres</item>
	</string-array> 
	<string-array name="prefListValuesTypes">
		<item>0</item>
		<item>1</item>
		<item>2</item>
	</string-array>
    <string name="lien">Pour plus d\'informations, rendez-vous sur: </string>
    <string name="addCal">Ajouter</string>
    <string name="prefList">changements sauvegardés</string>
 	<string-array name="listArray">
	    <item>Rouge</item>
	   <item>Vert</item>
	   <item>Bleu</item>
	</string-array> 
	<string-array name="listValues">
	   <item>1</item>
	   <item>2</item>
   	   <item>3</item>
	</string-array> 
</resources>