<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
  		<RadioGroup 
			android:layout_width="wrap_content"
			android:layout_height="435dp"
			android:orientation="vertical"
			android:id="@+id/design">
			<RadioButton
			    android:id="@+id/Noir"
               	android:text="@string/NoirGrandCercle"/>
			<RadioButton 
			    android:id="@+id/Ensimag"
               	android:text="@string/VertEnsimag"/>
            <RadioButton 
                android:id="@+id/Phelma"
                android:text="@string/RougePhelma"/>
            <RadioButton 
                android:id="@+id/Ense3"
                android:text="@string/BleuEnse3"/>
            <RadioButton 
                android:id="@+id/Pagora"
                android:text="@string/OrangePagora"/>
            <RadioButton 
                android:id="@+id/GI"
                android:text="@string/BleuGI"/>
            <RadioButton 
                android:id="@+id/CPP"
                android:text="@string/JauneCPP"/>
            <RadioButton 
                android:id="@+id/Esisar"
                android:text="@string/VioletEsisar"/>
	    </RadioGroup>
	    <LinearLayout
		    	android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			    android:orientation="horizontal"
			    android:layout_gravity="center_horizontal">
		    	<Button 
		    	    android:id="@+id/boutonOk"
		    	    android:gravity="center_horizontal|center_vertical"
		    	    android:layout_width="75dp"
		    	    android:layout_height="wrap_content"
		    	    android:layout_marginRight="30dp"
		    	    android:text="@string/Ok"/>
		</LinearLayout>
</LinearLayout>
    